--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "fansjs": "^0.0.4",
+    "fansjs": "^0.0.5",
     "jose": "^5.9.6",
     "js-cookie": "^3.0.5",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
