--- a/fansauth/Pipfile
+++ b/fansauth/Pipfile
@@ -5,18 +5,18 @@ name = "pypi"
 
 [packages]
 fastapi = "*"
-click = "*"
-uvicorn = "*"
-pytz = "*"
-pydantic = "*"
-pyyaml = "*"
-peewee = "*"
+pyjwt = "*"
 cryptography = "*"
-pyjwt = {extras = ["crypto"], version = "*"}
 fans = "*"
 requests = "*"
 
 [dev-packages]
+pyyaml = "*"
+peewee = "*"
+pydantic = "*"
+click = "*"
+uvicorn = "*"
+pytz = "*"
 
 [requires]
 python_version = "3.10"
