--- a/doy.yaml
+++ b/doy.yaml
@@ -6,7 +6,7 @@ common:
     cmd: npm run dev
     cwd: samples/web
   resback: &resback
-    cmd: PYTHONPATH="/home/fans656/fansauth" PIPENV_PIPFILE="back/Pipfile" pipenv run python -m back.app
+    cmd: PIPENV_IGNORE_VIRTUALENVS=1 PYTHONPATH="/home/fans656/fansauth" PIPENV_PIPFILE="back/Pipfile" pipenv run python -m back.app
     cwd: samples
 build:
   - name: web
@@ -20,7 +20,7 @@ build:
         eval: true
 test:
   - name: back
-    cmd: PIPENV_PIPFILE="fansauth/Pipfile" pipenv run pytest fansauth {args}
+    cmd: PIPENV_IGNORE_VIRTUALENVS=1 PIPENV_PIPFILE="fansauth/Pipfile" pipenv run pytest fansauth {args}
     args: true
   - name: inte
     cmd: npx playwright test --config=playwright.config.js {args}
@@ -33,7 +33,7 @@ test:
       - name: web
         <<: *web
       - name: back
-        cmd: PIPENV_PIPFILE="fansauth/Pipfile" pipenv run python -m fansauth serve -d tmp
+        cmd: PIPENV_IGNORE_VIRTUALENVS=1 PIPENV_PIPFILE="fansauth/Pipfile" pipenv run python -m fansauth serve -d tmp
         cwd: .
       - name: resweb
         <<: *resweb
@@ -43,7 +43,7 @@ serve:
   - name: web
     <<: *web
   - name: back
-    cmd: PIPENV_PIPFILE="fansauth/Pipfile" pipenv run python -m fansauth serve {args}
+    cmd: PIPENV_IGNORE_VIRTUALENVS=1 PIPENV_PIPFILE="fansauth/Pipfile" pipenv run python -m fansauth serve {args}
     args: true
   - name: resweb
     <<: *resweb
